[package]
name = "video-toolbox-sys"
version = "0.1.1"
edition = "2018"
authors = ["luozijun <luozijun.assistant@gmail.com>"]
description = "Bindings to VideoToolBox for OS X and iOS"
license = "MIT"
homepage   = "https://github.com/luozijun/rust-videotoolbox-sys"
repository = "https://github.com/luozijun/rust-videotoolbox-sys"
documentation = "https://docs.rs/videotoolbox-sys/*/x86_64-apple-darwin/videotoolbox_sys"


[dependencies]
libc = "0.2"
core-foundation-sys = "0.8"
core-media-sys = "0.1.0"
core-video-sys = "0.2.0"

[dev-dependencies]
core-foundation = "0.9"
objc2 = "0.6"
objc2-foundation = "0.3"
objc2-av-foundation = "0.3"
objc2-core-media = "0.3"
objc2-core-video = "0.3"
dispatch = "0.2"
block2 = "0.6"

[patch.crates-io]
core-video-sys = { git = "https://github.com/AstroHQ/core-video-sys" }
